# dto/doctors.dto.js
@@ -12,8 +12,7 @@ const GETDOCTORS = async (email, mobile_number) => {
     const data = await pgsql.query(query, { replacements, type: pgsql.QueryTypes.SELECT });
     return data;
   } catch (error) {
-    console.log(error);
-    logger.error(error.message);
+    logger.error({ GETDOCTORS: error.message });
     throw new Error(error.message);
   }
 };
@@ -31,15 +30,15 @@ const GetAllDoctorsDTO = async () => {
 
 const GetDoctroByIdDTO = async (doctor_id) => {
   try {
-    const query = DB.QUERY.GET_DOCTOR_BY_ID
-    const replacements = {doctor_id};
-    const data = await pgsql.query(query, {replacements, type: pgsql.QueryTypes.SELECT});
+    const query = DB.QUERY.GET_DOCTOR_BY_ID;
+    const replacements = { doctor_id };
+    const data = await pgsql.query(query, { replacements, type: pgsql.QueryTypes.SELECT });
     return data;
   } catch (error) {
-    logger.error({GetDoctroByIdDTO: error.message});
+    logger.error({ GetDoctroByIdDTO: error.message });
     throw new Error(error.message);
   }
-}
+};
 
 const AddDoctorDTO = async (name, dob, email, specialization, mobile_number, password, created_by) => {
   try {
